--- a/web/templates/diagnostic.html
+++ b/web/templates/diagnostic.html
@@ -118,7 +118,7 @@
                 <div class="card" style="height: 400px; ">
                     <div class="card-body">
                         <div id="aladin_lite_dss_card" style="height: 100%; display: none;">
-                            <div id='aladin_lite_dss_content' style='width: 100%; height: 100%; display: none; '></div>
+                            <div id='aladin_lite_dss_content' style='width: 100%; height: 100%; display: none; z-index: 999; '></div>
                             <!-- <div id="aladin_lite_dss_placeholder" style="position: absolute; bottom: 10px; right: 0px; ">
                                 <button class="btn btn-dark btn-sm" type="button" style="scale: 0.75; border-radius: 5em;" disabled>
                                     <span class="spinner-grow spinner-grow-sm" aria-hidden="true"></span>
@@ -127,7 +127,7 @@
                             </div> -->
                         </div>
                         <div id="aladin_lite_halpha_card" style="height: 100%; display: none;">
-                            <div id='aladin_lite_halpha_content' style='width: 100%; height: 100%; display: none; '></div>
+                            <div id='aladin_lite_halpha_content' style='width: 100%; height: 100%; display: none; z-index: 999; '></div>
                             <!-- <div id="aladin_lite_halpha_placeholder" style="position: absolute; bottom: 10px; right: 0px; ">
                                 <button class="btn btn-dark btn-sm" type="button" style="scale: 0.75; border-radius: 5em;" disabled>
                                     <span class="spinner-grow spinner-grow-sm" aria-hidden="true"></span>
@@ -136,7 +136,7 @@
                             </div> -->
                         </div>
                         <div id="aladin_lite_fermi_card" style="height: 100%; display: none;">
-                            <div id='aladin_lite_fermi_content' style='width: 100%; height: 100%; display: none; '></div>
+                            <div id='aladin_lite_fermi_content' style='width: 100%; height: 100%; display: none; z-index: 999; '></div>
                             <!-- <div id="aladin_lite_fermi_placeholder" style="position: absolute; bottom: 10px; right: 0px; ">
                                 <button class="btn btn-dark btn-sm" type="button" style="scale: 0.75; border-radius: 5em;" disabled>
                                     <span class="spinner-grow spinner-grow-sm" aria-hidden="true"></span>
