add: show run notes on webpages

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -126,6 +126,11 @@
                         <i class="bi bi-graph-up"></i>
                     </a>
                 </li>
+                <li class="nav-item" style="margin-bottom: 1.5em; ">
+                    <a href="/notes" style="color: white; ">
+                        <i class="bi bi-journal-text"></i>
+                    </a>
+                </li>
             </ul>
         </div>
         <!-- <div class="offcanvas-body" style="position: absolute; bottom: 0; left: 50%; width: 20em; transform: translate(-50%, -220%) rotate(-90deg); line-height: 0.9em; text-overflow: ellipsis; " onclick="show_version()">
