--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -112,22 +112,22 @@
         <div class="offcanvas-body" >
             <ul class="nav nav-pills nav-flush flex-column mb-auto text-center">
                 <li class="nav-item" style="margin-bottom: 1.5em; ">
-                    <a href="/" style="color: white; ">
+                    <a href="{{ url_for("index") }}" style="color: white; ">
                         <i class="bi bi-speedometer"></i>
                     </a>
                 </li>
                 <li class="nav-item" style="margin-bottom: 1.5em; ">
-                    <a href="/ephemeris" style="color: white; ">
+                    <a href="{{ url_for("ephemeris") }}" style="color: white; ">
                         <i class="bi bi-list-columns-reverse"></i>
                     </a>
                 </li>
                 <li class="nav-item" style="margin-bottom: 1.5em; ">
-                    <a href="/plots" style="color: white; ">
+                    <a href="{{ url_for("plots") }}" style="color: white; ">
                         <i class="bi bi-graph-up"></i>
                     </a>
                 </li>
                 <li class="nav-item" style="margin-bottom: 1.5em; ">
-                    <a href="/notes" style="color: white; ">
+                    <a href="{{ url_for("notes") }}" style="color: white; ">
                         <i class="bi bi-journal-text"></i>
                     </a>
                 </li>
