--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -6,7 +6,7 @@
 
 <div class="card" style="width: 30rem; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); ">
     <div class="card-body">
-        <form method="post" action="/login">
+        <form method="post" action="{{ url_for("login") }}">
             <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
                 <input type="password" class="form-control" id="password" name="password" required>
