--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -137,7 +137,7 @@
             <b style="font-size: 1.1em; margin-left: -0.1em; ">CHAMPSS Timing Pipeline</b><br>
             <small>{{ sources.psr_dir }}</small>
         </div> -->
-        <div class="offcanvas-body" style="writing-mode: tb-rl; rotate: 180deg; text-orientation: mixed; line-height: 0.9em; cursor: pointer; margin-left: -0.01em; " onclick="show_version()">
+        <div class="offcanvas-body" style="writing-mode: tb-rl; rotate: 180deg; text-orientation: mixed; line-height: 0.9em; cursor: pointer; margin-left: -0.01em; overflow: hidden; " onclick="show_version()">
             <b style="font-size: 1em; margin-left: -0.1em; ">CHAMPSS Timing Pipeline</b><br>
             <!-- <small>{{ sources.psr_dir }}</small> -->
             <small style="font-size: 0.7em; ">{{ app.sources.get_last_updated() }}</small>
